--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -88,7 +88,7 @@
 	
 	.navigation {	
 		padding: 5px 0 !important;
-		min-height: 80px;
+		min-height: 100px;
 	}
 	
 	.align-items-center {
@@ -108,6 +108,10 @@
 	
 	.single-service {
 		min-height: 340px !important;
+	}
+	
+	.navbar-brand {
+    		margin-top: 20px;
 	}
 	
 	.navbar-brand img {
