--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -16,7 +16,7 @@
 	height: 18px;
 	margin: -8px 0  0;
 	border-radius: 50%;
-	background: #37adbf;
+	background: #fea1c9;
 	cursor: pointer;
 	border: 0 !important;
 }
@@ -26,7 +26,7 @@
 	height: 18px;
 	margin: -8px 0  0;
 	border-radius: 50%;
-	background: #37adbf;
+	background: #fea1c9;
 	cursor: pointer;
 	border: 0 !important;
 }
@@ -36,7 +36,7 @@
 	height: 18px;
 	margin: -8px 0  0;
 	border-radius: 50%;
-	background: #37adbf;
+	background: #fea1c9;
 	cursor: pointer;
 	border: 0 !important;
 }
@@ -105,11 +105,11 @@
 }
   
 .range-labels .active {
-    color: #37adbf;
+    color: #fea1c9;
 }
   
 .range-labels .selected::before {
-	background: #37adbf;
+	background: #fea1c9;
 }
   
 .range-labels .active.selected::before {
