content update for 2023 season

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -3,8 +3,12 @@
     padding-right: 25px !important;
 }
 
+li::before {
+	color: #fea1c9 ;
+  }
+
 .single-service {
-	min-height: 500px;
+	min-height: 470px;
 }
 
 .nav-item:hover a {
